# cpp-network-tasks

src/l1/resolve/: CMakeLists.txt
src/l1/udp_server/: main.cpp
src/l2/linux_call_intercepter/: call_intercepter.cpp
